# tasktimetracker

./: Cargo.toml
migrations/: 20240301204852_init.sql  20240301224807_init.sql  20240302120910_init.sql  20240317131033_booking.sql  20240704160755_init.sql
src/: booking.rs  error.rs  main.rs  records.rs  tag.rs  tagassignment.rs
src/handlers/: booking_handlers.rs  mod.rs  tag_handlers.rs  tagassignment_handlers.rs
