[package]
name = "tasktimetracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["query"] }
futures = "0.3"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite", "macros" ] }
tokio = { version = "1.36.0", features = ["rt", "macros", "full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "full"] }
